tests/baselines/reference/for-of9.errors.txt
for-of9.ts(3,11): error TS2488: Type '"hello"' must have a '[Symbol.iterator]()' method that returns an iterator.


==== for-of9.ts (1 errors) ====
    var v: string;
    for (v of ["hello"]) { }
    for (v of "hello") { }
              ~~~~~~~
!!! error TS2488: Type '"hello"' must have a '[Symbol.iterator]()' method that returns an iterator.